fabric/support/test/tests/noble_ui/type_value_invalid_item.stderr
error: Invalid noble::type_value, expected item fn
  --> $DIR/type_value_invalid_item.rs:18:24
   |
18 |     #[noble::type_value] struct Foo;
   |                           ^^^^^^
